--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "heatmap-client",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --open --ssl --ssl-cert src/app/_assets/localhost.crt --ssl-key src/app/_assets/localhost.key",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -19,6 +19,15 @@
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "@asymmetrik/ngx-leaflet": "^8.1.0",
+    "@types/mapbox__mapbox-gl-geocoder": "^4.7.0",
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.5.1",
+    "leaflet": "^1.7.1",
+    "leaflet.heat": "^0.2.0",
+    "mapbox-gl": "^2.1.1",
+    "ngx-mapbox-gl": "^6.0.3",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -28,7 +37,9 @@
     "@angular/cli": "~11.2.0",
     "@angular/compiler-cli": "~11.2.0",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@types/leaflet": "^1.5.23",
+    "@types/mapbox-gl": "^2.1.0",
+    "@types/node": "^12.20.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
