--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,9 @@
               "./node_modules/leaflet/dist/leaflet.css"
             ],
             "scripts": [
+              "./node_modules/leaflet/dist/leaflet.js",
+              "./node_modules/heatmap.js/build/heatmap.js",
+              "./node_modules/leaflet-heatmap/leaflet-heatmap.js"
             ]
           },
           "configurations": {
