--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "@asymmetrik/ngx-leaflet": "^8.1.0",
     "@types/mapbox__mapbox-gl-geocoder": "^4.7.0",
     "bootstrap": "^4.6.0",
+    "heatmap.js": "^2.0.5",
     "jquery": "^3.5.1",
     "leaflet": "^1.7.1",
-    "leaflet.heat": "^0.2.0",
+    "leaflet-heatmap": "^1.0.0",
     "mapbox-gl": "^2.1.1",
     "ngx-mapbox-gl": "^6.0.3",
     "popper.js": "^1.16.1",
